# serdescontainer

./: README.md  pyproject.toml  setup.cfg
src/serdescontainer/: __init__.py  base_container.py
