[metadata]
name = serdescontainer
version = attr: serdescontainer._version.__version__
author = hejyll
author_email = hejyll@gmail.com
url = https://github.com/hejyll/serdescontainer
description = file: README.md
long_description_content_type = text/markdown
keywords = serialize
license = CC0 1.0
classifiers =
    License :: OSI Approved :: Creative Commons Zero v1.0 Universal
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.extras_require]
dev = 
    black==22.10.0
    isort==5.10.1
    pytest==7.2.0
